Corrigindo script e html.

--- a/miniapps/todos/index.html
+++ b/miniapps/todos/index.html
@@ -19,6 +19,6 @@
   <ul id="lista-tarefas"></ul>
 </div>
 
-<script src="crud_local.js"></script>
+<script src="script.js"></script>
 </body>
 </html>
