--- a/miniapps/livros_js/index.html
+++ b/miniapps/livros_js/index.html
@@ -1,24 +1,25 @@
-<!DOCTYPE html>
-<html lang="pt-BR">
-<head>
-  <meta charset="UTF-8">
-  <title>Catálogo de Livros</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="styles.css">
-</head>
-<body>
-<div class="container">
-  <h1>📚 Catálogo de Livros</h1>
+<><!DOCTYPE html>
+  <html lang="pt-BR">
+  <head>
+    <meta charset="UTF-8">
+    <title>Catálogo de Livros</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="styles.css">
+  </head>
+  <body>
+  <div class="container">
+    <h1>📚 Catálogo de Livros</h1>
 
-  <form id="form-livro">
-    <input type="text" id="titulo" placeholder="Título do livro" required>
-    <input type="text" id="autor" placeholder="Autor do livro" required>
-    <button type="submit">Adicionar</button>
-  </form>
+    <form id="form-livro">
+      <input type="text" id="titulo" placeholder="Título do livro" required>
+      <input type="text" id="autor" placeholder="Autor do livro" required>
+      <button type="submit">Adicionar</button>
+    </form>
 
-  <ul id="lista-livros"></ul>
-</div>
+    <ul id="lista-livros"></ul>
+  </div>
 
-<script src="app.js"></script>
-</body>
-</html>
+  <script src="app.js"></script>
+  </body>
+  </html>
+</>
